--- a/overstack-app/package.json
+++ b/overstack-app/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "overstack-app",
   "version": "0.1.0",
   "private": true,
@@ -28,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "server": "json-server --watch db.json --port 8080",
     "start": "react-scripts start",
     "build": "react-scripts build",
